--- a/src/app/userlogin/userlogin.component.html
+++ b/src/app/userlogin/userlogin.component.html
@@ -1,21 +1,27 @@
-<div class = "container">
-    <div class = "form">
+<div class="container w-25 mt-5">
 
-    <h2>Login</h2>
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <label>Email :   </label>
-    <input type="text" formControlName="Email">
-    <br/>
-    <br/>
-    <label>Password :   </label>
-    <input type="password" formControlName="Password">
-    <br/>
-    <br/>
-    <button>Login</button>
-    <br/>
-    <br/>
-    <button routerLink="/home">Return</button>
-</form>
+  <main class="form-signin w-100 m-auto">
+    <form>
+      <img class="mb-5 " src="/assets/film-slate.png" alt="" width="72" height="57">
+      <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
-</div>
+      <div class="form-floating">
+        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email address</label>
+      </div>
+      <div class="form-floating">
+        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <label for="floatingPassword">Password</label>
+      </div>
+
+      <div class="form-check text-start my-3">
+        <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Remember me
+        </label>
+      </div>
+      <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+      <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
+    </form>
+  </main>
 </div>
