--- a/src/app/userlogin/userlogin.component.html
+++ b/src/app/userlogin/userlogin.component.html
@@ -2,7 +2,7 @@
 
   <main class="form-signin w-100 m-auto">
     <form>
-      <img class="mb-5 " src="/assets/film-slate.png" alt="" width="72" height="57">
+      <img class="mb-5 " src="/assets/pizza_icon.svg" alt="" width="100" height="100">
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
       <div class="form-floating">
@@ -20,7 +20,7 @@
           Remember me
         </label>
       </div>
-      <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+      <button class="btn btn-primary w-100 py-2" type="submit">LOGIN</button>
       <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
     </form>
   </main>
