--- a/src/app/userregister/userregister.component.html
+++ b/src/app/userregister/userregister.component.html
@@ -1,27 +1,31 @@
-<div class = "form-container">
+<div class="container w-25 mt-5">
 
-    <div>
-        <img src="assets/pizza_icon.svg" alt="Logo" width="100px" height="100px">
-        <p>Meal Dash</p>
+  <main class="form-signin w-100 m-auto">
+    <form>
+      <img class="mb-5 " src="/assets/pizza_icon.svg" alt="" width="100" height="100">
+      <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+
+      <div class="form-floating">
+        <input type="text" class="form-control" id="floatingDisplayName" placeholder="Display Name">
+        <label for="floatingDisplayName">Display Name</label>
       </div>
-    
-      <div class="input-container">
-      <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <label>Display Name: </label>
-        <input type="text" formControlName="displayName">
-        <br/>
-        <br/>
-        <label>Email: </label>
-        <input type="text" formControlName="Email">
-        <br/>
-        <br/>
-        <label>Password: </label>
-        <input type="password" formControlName="Password">
-        <br/>
-        <br/>
-        <button class="registerButton">Register</button>
-        <br/>
-        <br/>
+      <div class="form-floating">
+        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email address</label>
+      </div>
+      <div class="form-floating">
+        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <label for="floatingPassword">Password</label>
+      </div>
+
+      <div class="form-check text-start my-3">
+        <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Remember me
+        </label>
+      </div>
+      <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+      <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
     </form>
-    </div>
+  </main>
 </div>
