--- a/src/app/userlogin/userlogin.component.css
+++ b/src/app/userlogin/userlogin.component.css
@@ -3,15 +3,11 @@ button{
     height: 60;
     color: white;
     background-color: #BD1E1E;
+    border: white;
 }
 
 button:hover{
     
     color: white;
     background-color: #961717;
-}
-
-button:active
-{
-    background-color: #73ff00;
 }
