--- a/src/app/userlogin/userlogin.component.html
+++ b/src/app/userlogin/userlogin.component.html
@@ -1,27 +1,23 @@
 <div class="container w-25 mt-5">
 
   <main class="form-signin w-100 m-auto">
-    <form>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <img class="mb-5 " src="/assets/pizza_icon.svg" alt="" width="100" height="100">
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
       <div class="form-floating">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" formControlName="Email">
         <label for="floatingInput">Email address</label>
       </div>
+      <br/>
+
       <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <input type="password" class="form-control" id="floatingPassword" placeholder="Password" formControlName="Password">
         <label for="floatingPassword">Password</label>
       </div>
-
-      <div class="form-check text-start my-3">
-        <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-        <label class="form-check-label" for="flexCheckDefault">
-          Remember me
-        </label>
-      </div>
-      <button class="btn btn-primary w-100 py-2" type="submit">LOGIN</button>
-      <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
+      <br/>
+      
+      <button class="btn btn-primary w-100 py-2" onclick="">LOGIN</button>
     </form>
   </main>
 </div>
