--- a/src/app/userregister/userregister.component.css
+++ b/src/app/userregister/userregister.component.css
@@ -1,23 +1,19 @@
-
-
-input{
-    border-radius: 4px;
-    width: 200px;
-    height: 30px;
-    color: grey;
-}
-
-.registerButton{
-    width: 130px;
-    height:60px;
-    background-color: #BD1E1E;
-    border-radius: 5px;
+button{
+    width: 130;
+    height: 60;
     color: white;
-    border:white;
+    background-color: #BD1E1E;
+    border: white;
 }
 
-.label{
-    padding:20px;
-    margin:20px;
+button:hover{
+    
+    color: white;
+    background-color: #961717;
 }
 
+#emss {
+    text-align: center;
+    color:#BD1E1E;
+    font-weight: bold;
+}
