--- a/src/app/features/users/user-home/user-home.component.html
+++ b/src/app/features/users/user-home/user-home.component.html
@@ -1,25 +1,3 @@
 <app-home-nav-bar></app-home-nav-bar>
 <app-user-home-mid></app-user-home-mid>
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="registrationContainer">
-</div>
-
-<div class="popup">
-    <div class="insidePopup">
-        <app-userregister></app-userregister>
-        </div>
-        
-</div>
-
+<app-footer></app-footer>
