--- a/src/app/features/Auth/user/userlogin/userlogin.component.html
+++ b/src/app/features/Auth/user/userlogin/userlogin.component.html
@@ -2,7 +2,7 @@
 
   <main class="form-signin w-100 m-auto">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <img class="mb-5 " src="/assets/pizza_icon.svg" alt="" width="100" height="100">
+      <img class="mb-5 " src="assets/pizza_icon.svg" alt="" width="100" height="100">
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
       <div class="form-floating">
@@ -16,7 +16,7 @@
         <label for="floatingPassword">Password</label>
       </div>
       <br/>
-      
+
       <button class="btn btn-primary w-100 py-2" onclick="">LOGIN</button>
     </form>
   </main>
