--- a/src/app/features/restaurant_manager/restaurant-wizard/restaurant-wizard.component.html
+++ b/src/app/features/restaurant_manager/restaurant-wizard/restaurant-wizard.component.html
@@ -1,25 +1,25 @@
 <div class="container w-25 mt-5">
 
     <main class="form-signin w-100 m-auto">
-      
+
       <form [formGroup]="form" (ngSubmit)="onSubmit()">
-  
-  
+
+
         <div class="logoImg">
-        <img class="mb-5 " src="/assets/pizza_icon.svg" alt="" width="100" height="100">
+        <img class="mb-5 " src="assets/pizza_icon.svg" alt="" width="100" height="100">
         <h1 id="emss" class="h3 mb-3 fw-normal">Meal Dash</h1>
     </div>
         <br/>
         <br/>
         <h1 id="emss" class="h3 mb-3 fw-normal">Add Your Restaurant</h1>
-  
-        
+
+
         <div class="form-floating">
           <input type="text" class="form-control" id="floatingRestaurantName" placeholder="floatingRestaurantName" formControlName="restaurant_Name">
           <label for="floatingDisplayName">Restaurant Name</label>
         </div>
         <br/>
-  
+
         <div class="form-floating">
           <input type="file" class="form-control" id="floatingInput" placeholder="name@example.com" formControlName="restaurant_Logo">
           <label for="floatingInput">Logo</label>
@@ -30,13 +30,13 @@
           <label for="floatingDisplayName">Delivery Fees</label>
         </div>
         <br/>
-  
+
         <div class="form-floating">
           <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" formControlName="restaurant_DeliveryCities ">
           <label for="floatingInput">Delivery Cities</label>
         </div>
         <br/>
-  
+
         <div class="form-floating">
           <input type="number" class="form-control" id="floatingPassword" placeholder="Password" formControlName="restaurant_CookingTime">
           <label for="floatingPassword">Cooking Time ( In Minutes )</label>
@@ -53,15 +53,15 @@
             </select>
             <label for="floatingPassword">Cuisine</label>
           </div>
-          
+
           <br/>
-  
+
         <div class="form-floating">
           <input type="text" class="form-control" id="floatingPassword" placeholder="Password" formControlName="restaurant_Tags">
           <label for="floatingPassword">Cuisine Tags: Seperate each tag by a comma</label>
         </div>
         <br/>
-  
+
         <br/>
         <button id="cancel" class="btn btn-primary w-100 py-2" >Cancel</button>
         <br/>
@@ -70,4 +70,3 @@
       </form>
     </main>
   </div>
-  
