--- a/src/app/features/users/user-restaurant-list/user-restaurant-list.component.html
+++ b/src/app/features/users/user-restaurant-list/user-restaurant-list.component.html
@@ -74,14 +74,14 @@
     <button class="filter-btn">APPLY</button>
   </div>
   <div class="listings">
-    <div class="card">
+    <div class="card" *ngFor="let item of items">
       <img src="image.jpg" alt="Image" class="image" />
       <div class="content">
-        <div class="title">Title Here</div>
-        <div class="description">Description Here</div>
+        <div class="title">{{ item[0] }}</div>
+        <div class="description">{{ item[1] }}</div>
         <div class="info">
-          <div class="delivery">Delivery</div>
-          <div class="price">Price</div>
+          <div class="delivery">Delivery: {{ item[2] }}</div>
+          <div class="price">Price: {{ item[3] }}</div>
         </div>
       </div>
     </div>
