--- a/src/app/features/Auth/user/userlogin/userlogin.component.html
+++ b/src/app/features/Auth/user/userlogin/userlogin.component.html
@@ -17,7 +17,7 @@
       </div>
       <br/>
 
-      <button class="btn btn-primary w-100 py-2" onclick="">LOGIN</button>
+      <button class="login_btn btn btn-primary w-100 py-2" onclick="">LOGIN</button>
     </form>
   </main>
 </div>
