--- a/src/app/features/Auth/user/userregister/userregister.component.html
+++ b/src/app/features/Auth/user/userregister/userregister.component.html
@@ -34,8 +34,8 @@
       </div>
 
       <br/>
-      <button class="btn btn-primary w-100 py-2" >Register</button>
-      
+      <button class="Reg_btn btn btn-primary w-100 py-2" >Register</button>
+
     </form>
   </main>
 </div>
