--- a/src/app/features/restaurant_manager/restaurant-wizard/restaurant-wizard.component.html
+++ b/src/app/features/restaurant_manager/restaurant-wizard/restaurant-wizard.component.html
@@ -63,10 +63,10 @@
         <br/>
 
         <br/>
-        <button id="cancel" class="btn btn-primary w-100 py-2" >Cancel</button>
+        <button id="cancel" class="btn_add btn btn-primary w-100 py-2" >Cancel</button>
         <br/>
         <br/>
-        <button class="btn btn-primary w-100 py-2" >Next</button>
+        <button class="btn_add btn btn-primary w-100 py-2" >Next</button>
       </form>
     </main>
   </div>
