--- a/src/app/features/users/user-home-mid/user-home-mid.component.html
+++ b/src/app/features/users/user-home-mid/user-home-mid.component.html
@@ -1,16 +1,18 @@
-<div class="user-home-mid">
-
-  <div class="user-home-text">
-    <h1 class="user-home-mid-text">
-      COOL HEADER SLOGAN <br> STUFF
-      <span class="user-home-mid-title"> Here </span>
-    </h1>
-    <button type="button" class="user-home-mid-btn">Order Now</button>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="user-home-text">
+        <h1 class="user-home-mid-text">
+          Your Flavorful Journey Begins
+          <span class="user-home-mid-title">Here!</span>
+        </h1>
+        <button type="button" class="btn btn-danger rounded-pill px-4 text-uppercase  w-50 h-50 fs-3">Order Now</button>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="user-home-image">
+        <img src="assets/Burger.png" alt="Burger Image">
+      </div>
+    </div>
   </div>
-
-  <div class="user-home-image">
-    <img src="assets/Burger.png" alt="Burger Image">
-  </div>
-
-
 </div>
