--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import 'ngx-toastr/toastr';
-
 :root {
   --primary-color: #3498db;  /* A blue shade */
   --secondary-color: #2ecc71; /* A green shade */
@@ -17,12 +16,15 @@
 
 body{
   margin: 0;
-  height: 100%;
+  /*height: 100%;*/
   overflow-x: hidden;
 
 }
 footer {
   position: relative;
+  bottom: 0;
+  width: 100%;
+
 
 }
 
