Added Restaurant List Page

--- a/src/app/Shared/components/home-nav-bar/home-nav-bar.component.css
+++ b/src/app/Shared/components/home-nav-bar/home-nav-bar.component.css
@@ -1,8 +1,10 @@
 .nav-bar-title{
   color: var(--nice-red);
+  font-size: 35px;
 
 }
 
 .nav-bar{
   background-color: var(--not-so-pure-white);
+  height: 100px;
 }
