--- a/src/app/Shared/components/home-nav-bar/home-nav-bar.component.html
+++ b/src/app/Shared/components/home-nav-bar/home-nav-bar.component.html
@@ -2,22 +2,22 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light nav-bar ">
   <div class="container-fluid">
-    <img src="assets/Pizza_Logo.png" height="60">
-    <a class="navbar-brand fw-bold" href="#">Meal  <span class="nav-bar-title">Dash</span></a>
+    <img src="assets/Pizza_Logo.png" height="60px">
+    <a class="navbar-brand fw-bold fs-2" href="#">Meal<span class="nav-bar-title">Dash</span></a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a routerLink="/home" class="nav-link fw-bold" href="#">HOME</a>
+          <a routerLink="/home" class="nav-link fw-bold fs-5" href="#">HOME</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/about" class="nav-link fw-bold" href="#">ABOUT</a>
+          <a routerLink="/about" class="nav-link fw-bold fs-5" href="#">ABOUT</a>
         </li>
         <li *ngIf="this.authService.loggedinUserSignal() == null; else elseBlock">
-          <a routerLink="/register" class="nav-link nav-bar-title fw-bold">REGISTER</a>
+          <a routerLink="/register" class="nav-link nav-bar-title fs-5 fw-bold">REGISTER</a>
         </li>
 
         <li *ngIf="this.authService.loggedinUserSignal() == null; else elseBlock">
-          <a routerLink="/login" class="nav-link nav-bar-title fw-bold">LOGIN</a>
+          <a routerLink="/login" class="nav-link nav-bar-title fs-5 fw-bold">LOGIN</a>
         </li>
 
         <ng-template #elseBlock>
@@ -30,7 +30,7 @@
       </ul>
       <ul class="navbar-nav  mb-50 mb-lg-0">
       <li class="nav-item m-md-3">
-        <img src="assets/egypt.png" height="60" alt="Region">
+        <img src="assets/egypt.png" height="60px" alt="Region">
       </li>
       </ul>
     </div>
