--- a/src/app/features/Auth/user/userregister/userregister.component.html
+++ b/src/app/features/Auth/user/userregister/userregister.component.html
@@ -4,7 +4,7 @@
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
 
-      <img class="mb-5 " src="/src/assets/pizza_icon.svg" alt="" width="100" height="100">
+      <img class="mb-5 " src="assets/pizza_icon.svg" alt="" width="100" height="100">
       <h1 id="emss" class="h3 mb-3 fw-normal">Registration</h1>
 
       <div class="form-floating">
