--- a/src/app/Shared/components/profile/profile.component.html
+++ b/src/app/Shared/components/profile/profile.component.html
@@ -39,12 +39,9 @@
                   <div class="row pt-1">
                     <div class="col-6 mb-3">
                       <h6>Registration Date</h6>
-                      <p class="text-muted">Lorem ipsum</p>
+                      <p class="text-muted">{{this.registrationDate}}</p>
                     </div>
-                    <div class="col-6 mb-3">
-                      <h6>Restaurant Owned</h6>
-                      <p class="text-muted">Dolor sit amet</p>
-                    </div>
+                    
                   </div>
                   <div class="d-flex justify-content-start">
                     <a href="#!"><i class="fab fa-facebook-f fa-lg me-3"></i></a>
