--- a/src/app/features/Auth/user/userlogin/userlogin.component.html
+++ b/src/app/features/Auth/user/userlogin/userlogin.component.html
@@ -18,6 +18,9 @@
       <br/>
 
       <button class="login_btn btn btn-primary w-100 py-2" onclick="">LOGIN</button>
+      <br/>
+      <br/>
+      <span>Don't have an account?<button  type="button" (click)="gotoRegister()" id="DONThave"><u id="underlinedRegister">Register Now!</u></button></span>
     </form>
   </main>
 </div>
