--- a/src/app/features/Auth/user/userregister/userregister.component.html
+++ b/src/app/features/Auth/user/userregister/userregister.component.html
@@ -32,12 +32,13 @@
         </select>
         <label for="userType">User Type</label>
       </div>
-
+     
       <br/>
-      <button  class="btn btn-primary w-100 py-2" >Register</button>
       
-      <button class="Reg_btn btn btn-primary w-100 py-2" >Register</button>
-
+      <button  class="Reg_btn btn btn-primary w-100 py-2" >Register</button>
+      <br/>
+      <br/>
+      <span>Already have an account?<button  type="button" (click)="gotoLogin()" id="alrhave"><u id="underlinedLogin">Login</u></button></span>
     </form>
   </main>
 </div>
