--- a/src/app/features/restaurant_manager/restaurant-wizard/restaurant-wizard.component.html
+++ b/src/app/features/restaurant_manager/restaurant-wizard/restaurant-wizard.component.html
@@ -32,7 +32,7 @@
         <br/>
 
         <div class="form-floating">
-          <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" formControlName="restaurant_DeliveryCities ">
+          <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" formControlName="restaurant_DeliveryCities">
           <label for="floatingInput">Delivery Cities</label>
         </div>
         <br/>
@@ -44,12 +44,10 @@
         <br/>
 
         <div class="form-floating">
-            <select type="number" class="form-control" id="floatingPassword" placeholder="Password" formControlName="nullfornow">
-                <option>emad</option>
-                <option>emad</option>
-                <option>emad</option>
-                <option>emad</option>
-                <option>emad</option>
+            <select type="number" class="form-control" id="floatingPassword" placeholder="Password" formControlName="restaurant_cuisineType">
+                <option>Shawarema</option>
+                <option>Burgers</option>
+                <option>Pasta</option>
             </select>
             <label for="floatingPassword">Cuisine</label>
           </div>
