--- a/src/app/Shared/components/profile/profile.component.html
+++ b/src/app/Shared/components/profile/profile.component.html
@@ -1,3 +1,5 @@
+<app-home-nav-bar></app-home-nav-bar>
+
 <section class="vh-100" style="background-color: #f4f5f7;">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -56,3 +58,5 @@
       </div>
     </div>
   </section>
+
+  <app-footer></app-footer>
