--- a/src/app/features/restaurant_manager/dashboard/dashboard.component.html
+++ b/src/app/features/restaurant_manager/dashboard/dashboard.component.html
@@ -124,16 +124,16 @@
       </div>
 
 
-      <h2>Section title</h2>
+      <h2>Overview</h2>
       <div class="table-responsive small">
         <table class="table table-striped table-sm">
           <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Header</th>
-            <th scope="col">Header</th>
-            <th scope="col">Header</th>
-            <th scope="col">Header</th>
+            <th scope="col">Order #</th>
+            <th scope="col">Customer Name</th>
+            <th scope="col">Customer Address</th>
+            <th scope="col">Order Date</th>
+            <th scope="col">Order Detials</th>
           </tr>
           </thead>
           <tbody>
