--- a/src/app/features/users/user-restaurant-list/user-restaurant-list.component.html
+++ b/src/app/features/users/user-restaurant-list/user-restaurant-list.component.html
@@ -109,11 +109,11 @@
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title">{{ items[0] }}</h5>
-          <div class="description">{{ items[1] }}</div>
+          <h5 class="card-title">{{item[0]}}</h5>
+          <div class="description">{{item[1]}}</div>
           <div class="info">
-            <div class="delivery">Delivery: {{ items[2] }}</div>
-            <div class="price">Price: {{ items[3] }}</div>
+            <div class="delivery">Delivery Fee: {{item[2]}}</div>
+            <div class="price">Cooking Time: emad {{item[3]}}</div>
           </div>
         </div>
       </div>
