--- a/src/app/features/users/user-restaurant-list/user-restaurant-list.component.html
+++ b/src/app/features/users/user-restaurant-list/user-restaurant-list.component.html
@@ -102,7 +102,7 @@
 
 
   <div class="listings ms-5">
-  <div class="card mb-3" style="max-width: 700px;" *ngFor="let item of items">
+  <div class="card mb-3" style="max-width: 700px;" *ngFor="let item of items" >
     <div class="row g-0">
       <div class="col-md-4">
         <img src="assets/egypt.png" class="img-fluid rounded-start" alt="res_logo"  width="100px">
@@ -112,8 +112,9 @@
           <h5 class="card-title">{{item[0]}}</h5>
           <div class="description">{{item[1]}}</div>
           <div class="info">
-            <div class="delivery">Delivery Fee: {{item[2]}}</div>
-            <div class="price">Cooking Time: emad {{item[3]}}</div>
+            <div class="delivery">Delivery Fee:<div> {{item[2]}}</div></div>
+            <div class="price">Cooking Time:{{item[3]}}</div>
+
           </div>
         </div>
       </div>
