--- a/src/app/features/users/user-restaurant-list/user-restaurant-list.component.html
+++ b/src/app/features/users/user-restaurant-list/user-restaurant-list.component.html
@@ -1,77 +1,100 @@
 <app-home-nav-bar></app-home-nav-bar>
 
-
 <div class="res-list-body">
   <div class="filters-and-search">
-
     <div class="input-group flex-nowrap">
       <div class="input-group flex-nowrap">
-        <span class="input-group-text" id="addon-wrapping"><i class="bi bi-search"></i></span>
-        <input type="text" class="form-control" placeholder="Search For Restaurants" aria-label="Username" aria-describedby="addon-wrapping">
+        <span class="input-group-text" id="addon-wrapping"
+          ><i class="bi bi-search"></i
+        ></span>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Search For Restaurants"
+          aria-label="Username"
+          aria-describedby="addon-wrapping"
+          [(ngModel)]="searchText"
+        />
       </div>
     </div>
 
-
-    <div class="filter-by mt-4 justify-content-evenly ">
+    <div class="filter-by mt-4 justify-content-evenly">
       <div class="filter-title fs-3 fw-bold">Filter By</div>
 
       <div class="filter-options">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value=""
+            id="flexCheckDefault2"
+          />
           <label class="form-check-label" for="flexCheckDefault">
-            Filter by  1
+            Filter by 1
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked2" >
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value=""
+            id="flexCheckChecked2"
+          />
           <label class="form-check-label" for="flexCheckChecked">
-            Filter  by 2
+            Filter by 2
           </label>
         </div>
       </div>
     </div>
 
-
     <div class="filter-resturant-types">
       <div class="filter-title fs-3 fw-bold">Restaurant Types</div>
       <div class="filter-options">
-
-
-<!--        <div class="filter-option">-->
-<!--          <input-->
-<!--            type="checkbox"-->
-<!--            id="restaurant-type-1"-->
-<!--            name="restaurant-type-1"-->
-<!--            value="restaurant-type-1"-->
-<!--          />-->
-<!--          <label for="restaurant-type-1">Restaurant Type 1</label>-->
-<!--        </div>-->
-<!--        <div class="filter-option">-->
-<!--          <input-->
-<!--            type="checkbox"-->
-<!--            id="restaurant-type-2"-->
-<!--            name="restaurant-type-2"-->
-<!--            value="restaurant-type-2"-->
-<!--          />-->
-<!--          <label for="restaurant-type-2">Restaurant Type 2</label>-->
-<!--        </div>-->
-<!--        <div class="filter-option">-->
-<!--          <input-->
-<!--            type="checkbox"-->
-<!--            id="restaurant-type-3"-->
-<!--            name="restaurant-type-3"-->
-<!--            value="restaurant-type-3"-->
-<!--          />-->
-<!--          <label for="restaurant-type-3">Restaurant Type 3</label>-->
-<!--        </div>-->
+        <!--        <div class="filter-option">-->
+        <!--          <input-->
+        <!--            type="checkbox"-->
+        <!--            id="restaurant-type-1"-->
+        <!--            name="restaurant-type-1"-->
+        <!--            value="restaurant-type-1"-->
+        <!--          />-->
+        <!--          <label for="restaurant-type-1">Restaurant Type 1</label>-->
+        <!--        </div>-->
+        <!--        <div class="filter-option">-->
+        <!--          <input-->
+        <!--            type="checkbox"-->
+        <!--            id="restaurant-type-2"-->
+        <!--            name="restaurant-type-2"-->
+        <!--            value="restaurant-type-2"-->
+        <!--          />-->
+        <!--          <label for="restaurant-type-2">Restaurant Type 2</label>-->
+        <!--        </div>-->
+        <!--        <div class="filter-option">-->
+        <!--          <input-->
+        <!--            type="checkbox"-->
+        <!--            id="restaurant-type-3"-->
+        <!--            name="restaurant-type-3"-->
+        <!--            value="restaurant-type-3"-->
+        <!--          />-->
+        <!--          <label for="restaurant-type-3">Restaurant Type 3</label>-->
+        <!--        </div>-->
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value=""
+            id="flexCheckDefault"
+          />
           <label class="form-check-label" for="flexCheckDefault">
             Restaurant Type 1
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" >
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value=""
+            id="flexCheckChecked"
+          />
           <label class="form-check-label" for="flexCheckChecked">
             Restaurant Type 2
           </label>
@@ -79,56 +102,58 @@
       </div>
     </div>
 
-
-
-    <button class="btn btn-danger rounded-pill px-4 text-uppercase  w-12 h-12 fs-6 mt-5">APPLY</button>
+    <button
+      class="btn btn-danger rounded-pill px-4 text-uppercase w-12 h-12 fs-6 mt-5"
+    >
+      APPLY
+    </button>
   </div>
 
-
-
-<!--  <div class="listings">-->
-<!--    <div class="card" *ngFor="let item of items">-->
-<!--      <img src="assets/egypt.png" alt="Image" class="image"  width="100px" />-->
-<!--      <div class="content">-->
-<!--        <div class="title">{{ item[0] }}</div>-->
-<!--        <div class="description">{{ item[1] }}</div>-->
-<!--        <div class="info">-->
-<!--          <div class="delivery">Delivery: {{ item[2] }}</div>-->
-<!--          <div class="price">Price: {{ item[3] }}</div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-
+  <!--  <div class="listings">-->
+  <!--    <div class="card" *ngFor="let item of items">-->
+  <!--      <img src="assets/egypt.png" alt="Image" class="image"  width="100px" />-->
+  <!--      <div class="content">-->
+  <!--        <div class="title">{{ item[0] }}</div>-->
+  <!--        <div class="description">{{ item[1] }}</div>-->
+  <!--        <div class="info">-->
+  <!--          <div class="delivery">Delivery: {{ item[2] }}</div>-->
+  <!--          <div class="price">Price: {{ item[3] }}</div>-->
+  <!--        </div>-->
+  <!--      </div>-->
+  <!--    </div>-->
+  <!--  </div>-->
 
   <div class="listings ms-5">
-  <div class="card mb-3" style="max-width: 700px;" *ngFor="let item of items" >
-    <div class="row g-0" [routerLink]="['/r_res_list/', item.restaurant_id]">
-      <div class="col-md-4">
-        <img src="assets/egypt.png" class="img-fluid rounded-start" alt="res_logo"  width="100px">
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">{{item[0]}}</h5>
-          <div class="description">{{item[1]}}</div>
-          <div class="info">
-            <div class="delivery">Delivery Fee:<div> {{item[2]}}</div></div>
-            <div class="price">Cooking Time:{{item[3]}}</div>
-
+    <div
+      class="card mb-3"
+      style="max-width: 700px"
+      *ngFor="let item of items | filter : searchText"
+    >
+      <div class="row g-0" [routerLink]="['/r_res_list/', item.restaurant_id]">
+        <div class="col-md-4">
+          <img
+            src="assets/egypt.png"
+            class="img-fluid rounded-start"
+            alt="res_logo"
+            width="100px"
+          />
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">{{ item[0] }}</h5>
+            <div class="description">{{ item[1] }}</div>
+            <div class="info">
+              <div class="delivery">
+                Delivery Fee:
+                <div>{{ item[2] }}</div>
+              </div>
+              <div class="price">Cooking Time:{{ item[3] }}</div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  </div>
-
-
-
-
-
 </div>
-
-
-
 
 <app-footer></app-footer>
