--- a/src/app/features/users/user-restaurant-list/user-restaurant-list.component.html
+++ b/src/app/features/users/user-restaurant-list/user-restaurant-list.component.html
@@ -28,9 +28,11 @@
             type="checkbox"
             value=""
             id="flexCheckDefault2"
+            [(ngModel)]="filterByBurgers"
+            (ngModelChange)="onFilterByBurgersChange()"
           />
           <label class="form-check-label" for="flexCheckDefault">
-            Filter by 1
+            Filter by burgers
           </label>
         </div>
         <div class="form-check">
@@ -39,74 +41,15 @@
             type="checkbox"
             value=""
             id="flexCheckChecked2"
+            [(ngModel)]="filterByPasta"
+            (ngModelChange)="onFilterByPastaChange()"
           />
           <label class="form-check-label" for="flexCheckChecked">
-            Filter by 2
+            Filter by pasta
           </label>
         </div>
       </div>
     </div>
-
-    <div class="filter-resturant-types">
-      <div class="filter-title fs-3 fw-bold">Restaurant Types</div>
-      <div class="filter-options">
-        <!--        <div class="filter-option">-->
-        <!--          <input-->
-        <!--            type="checkbox"-->
-        <!--            id="restaurant-type-1"-->
-        <!--            name="restaurant-type-1"-->
-        <!--            value="restaurant-type-1"-->
-        <!--          />-->
-        <!--          <label for="restaurant-type-1">Restaurant Type 1</label>-->
-        <!--        </div>-->
-        <!--        <div class="filter-option">-->
-        <!--          <input-->
-        <!--            type="checkbox"-->
-        <!--            id="restaurant-type-2"-->
-        <!--            name="restaurant-type-2"-->
-        <!--            value="restaurant-type-2"-->
-        <!--          />-->
-        <!--          <label for="restaurant-type-2">Restaurant Type 2</label>-->
-        <!--        </div>-->
-        <!--        <div class="filter-option">-->
-        <!--          <input-->
-        <!--            type="checkbox"-->
-        <!--            id="restaurant-type-3"-->
-        <!--            name="restaurant-type-3"-->
-        <!--            value="restaurant-type-3"-->
-        <!--          />-->
-        <!--          <label for="restaurant-type-3">Restaurant Type 3</label>-->
-        <!--        </div>-->
-        <div class="form-check">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            value=""
-            id="flexCheckDefault"
-          />
-          <label class="form-check-label" for="flexCheckDefault">
-            Restaurant Type 1
-          </label>
-        </div>
-        <div class="form-check">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            value=""
-            id="flexCheckChecked"
-          />
-          <label class="form-check-label" for="flexCheckChecked">
-            Restaurant Type 2
-          </label>
-        </div>
-      </div>
-    </div>
-
-    <button
-      class="btn btn-danger rounded-pill px-4 text-uppercase w-12 h-12 fs-6 mt-5"
-    >
-      APPLY
-    </button>
   </div>
 
   <!--  <div class="listings">-->
