Added the restaurant page and integrated routing with passing parameters, Adjusted login error handling.

--- a/src/app/features/restaurant_manager/restaurant-wizard/restaurant-wizard.component.html
+++ b/src/app/features/restaurant_manager/restaurant-wizard/restaurant-wizard.component.html
@@ -51,12 +51,18 @@
             </select>
             <label for="floatingPassword">Cuisine</label>
           </div>
+          
 
           <br/>
 
         <div class="form-floating">
           <input type="text" class="form-control" id="floatingPassword" placeholder="Password" formControlName="restaurant_Tags">
           <label for="floatingPassword">Cuisine Tags: Seperate each tag by a comma</label>
+        </div>
+        <br/>
+        <div class="form-floating">
+          <input type="text" id="resDesc" class="form-control" id="floatingPassword" placeholder="Password" formControlName="restaurant_Description">
+          <label for="floatingPassword">Describe Your Restaurant</label>
         </div>
         <br/>
 
