--- a/src/app/features/users/user-restaurant-list/user-restaurant-list.component.css
+++ b/src/app/features/users/user-restaurant-list/user-restaurant-list.component.css
@@ -52,7 +52,7 @@
 }
 
 .filter-options {
-  background-color: var(--background-color);
+  background-color: white;
   border-radius: 7px;
-
+  padding: 20px;
 }
