--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,8 +4,7 @@
   <div  id="emad" class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
     <div class="col-md-6 p-lg-5 mx-auto my-5">
       <h1 class="display-6 fw-bold">Designed by Team Tech-Labs</h1>
-      <h3 class="fw-normal text-muted mb-3">Meal dash is a ...... ANYWAYS --> Neon Genesis Evangelion is nice 
-        and i want to finish this project to watch the movies thanks</h3>
+      <h3 class="fw-normal text-muted mb-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</h3>
       <div class="d-flex gap-3 justify-content-center lead fw-normal">
       </div>
     </div>
