--- a/src/app/features/Auth/user/userlogin/userlogin.component.html
+++ b/src/app/features/Auth/user/userlogin/userlogin.component.html
@@ -1,3 +1,4 @@
+<app-home-nav-bar></app-home-nav-bar>
 <div class="container w-25 mt-5">
 
   <main class="form-signin w-100 m-auto">
@@ -24,3 +25,4 @@
     </form>
   </main>
 </div>
+<app-footer></app-footer>
