--- a/src/app/features/Auth/user/userregister/userregister.component.html
+++ b/src/app/features/Auth/user/userregister/userregister.component.html
@@ -1,3 +1,5 @@
+<app-home-nav-bar></app-home-nav-bar>
+
 <div class="container w-25 mt-5">
 
   <main class="form-signin w-100 m-auto">
@@ -42,3 +44,5 @@
     </form>
   </main>
 </div>
+<app-footer></app-footer>
+
